Revision history for Perl extension Util::H2O.

0.01	Sat, May 16 2020	commit 7eb1833b10a40eb4f1f6fa5a60a8be7c69a293d1
	- first public release

0.02	Sat, May 16 2020
	- improved docs