@@ -4,4 +4,5 @@ Revision history for Perl extension Util::H2O.
 	- first public release
 
 0.02	Sat, May 16 2020
+	- added "-class" option
 	- improved docs
